# ascfinal

./: .gitignore  ExportAllProducts_20221026234115992.xlsx  db.sqlite3  pyproject.toml
app1/: admin.py  apps.py  models.py  serializer.py  signals.py  urls.py  views.py
app1/migrations/: 0001_initial.py  0002_alter_organization_note.py  0003_testsubmission.py  0011_alter_product_sku.py  0012_alter_product_image.py  0013_alter_customuser_is_active.py  0014_alter_product_image.py  0015_alter_customuser_type.py  0016_alter_customuser_type.py  0017_product1.py  0018_test.py  0019_auto_20221112_0629.py  0020_auto_20221112_0636.py  0021_auto_20221112_0752.py
django_project/: settings.py  urls.py  views.py
templates/.well-known/pki-validation/: 20393098ADC71CCE80CF071C69400304.txt
